src/test/ui/span/dropck_direct_cycle_with_drop.nll.stderr
error[E0597]: `d1` does not live long enough
  --> $DIR/dropck_direct_cycle_with_drop.rs:48:19
   |
LL |     d2.p.set(Some(&d1));
   |                   ^^^ borrowed value does not live long enough
LL |     //~^ ERROR `d1` does not live long enough
LL | }
   | -
   | |
   | borrowed value only lives until here
   | borrow later used here, when `d1` is dropped

error[E0597]: `d2` does not live long enough
  --> $DIR/dropck_direct_cycle_with_drop.rs:46:19
   |
LL |     d1.p.set(Some(&d2));
   |                   ^^^ borrowed value does not live long enough
...
LL | }
   | -
   | |
   | borrowed value only lives until here
   | borrow later used here, when `d1` is dropped

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
